# rfam-batch-search

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  docker-compose.yml  logger.py  main.py  pyproject.toml
.github/workflows/: main.yml
ansible/: hosts  rfam_batch_search.yml
ansible/rfam/tasks/: main.yml
gunicorn/: gunicorn_conf.py
kubernetes/: namespace.yaml  quota-mem-cpu-cluster-hx.yaml  quota-mem-cpu.yaml
kubernetes/helm/: values.hx.yaml  values.yaml
kubernetes/helm/templates/: nginx.yaml  rfam-batch-search.yaml
nginx/conf.d/: local.conf
postfix/: mailname  main.cf
rfam_batch/: api.py  job_dispatcher.py
terraform/: main.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
tests/: api_test.py  test_api_file.py  test_api_parse.py
tests/example_files/: out  sequence  tblout
